resources/main.css
/* ... */
::selection {
    color: var(--background);
    background-color: var(--foreground);
}

::-webkit-scrollbar,
::-webkit-scrollbar-track,
::-webkit-scrollbar-corner {
    background-color: var(--background);
}
::-webkit-scrollbar,
::-webkit-scrollbar-track {
    background-color: var(--inactive-color);
    border-radius: 8px;
    width: var(--scrollbar-width);
    height: var(--scrollbar-width);
}
::-webkit-scrollbar-thumb {
    background-color: var(--foreground);
    border-radius: 8px;
    cursor: pointer;
}
::-webkit-scrollbar-thumb:hover {
    background-color: var(--foreground);
}

thead {
    vertical-align: bottom;
}

h1,
button,
.button {
    font-family: "Futura-Medium", Futura, "Helvetica Neue", Helvetica, Verdana, sans-serif;
}
.button {
    text-decoration: none;
}

code {
    font-family: Menlo, Monaco, monospace;
    font-size: smaller;
}

hr {
    border: 1px solid var(--foreground);
    width: 50%;
    margin: 40px auto;
}

img {
    user-select: none;
    -webkit-user-select: none;
    -webkit-user-drag: none;
}

.no-select {
    user-select: none;
}

main {
}

.logo {
    position: absolute;
    left: -70px;
    top: 155px;
    width: 75px;
    height: 406px;
    cursor: pointer;
    text-decoration: none;
}

.version {
    transform: rotate(-90deg);
    font-size: 65px;
    font-family: Futura-Medium, Futura, Roboto, "Helvetica Neue", Helvetica, Verdana, sans-serif;
    font-style: italic;
    letter-spacing: -0.05em;
    position: absolute;
    right: 0;
    top: -105px;
}

.next {
    right: -13px;
    top: -110px;
    color: var(--highlight);
}

h1 {
    margin-top: 30px;
    font-size: 40px;
    font-weight: normal;
    color: var(--foreground);
    text-align: center;
}

h2 {
    font-weight: normal;
    text-align: center;
    color: var(--foreground);
}

h3 {
    margin: 10px 0 6px 0;
    font-weight: normal;
    text-align: center;
}

p {
    font-size: 16px;
    line-height: 21px;
}

a {
    color: inherit;
}

li {
    font-size: 16px;
    line-height: 21px;
}

li + li {
    margin-top: 21px;
}

li + ul > li {
    margin-top: 0;
}

.compact li {
    margin-top: 5px;
}

li + ul {
    margin-bottom: 21px;
}

.buttons {
    margin-top: 30px;
    display: flex;
    flex-direction: column;
}

section#home > .buttons {
    margin-top: 80px;
}

.button-row {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    margin: 5px 0px;
}

button,
.button {
    appearance: none;
    border: none;
    background-color: transparent;
    cursor: pointer;
    margin: 0px;
    padding: 0px;
    text-align: center;
}

.button {
    box-sizing: border-box;
    text-decoration: none;
}

.buttons button,
.buttons .button {
    appearance: none;
    border: 2px solid var(--foreground);
    border-radius: 8px;
    min-width: 160px;
    padding: 6px 15px;
    margin: 0 10px;
    font-size: 16px;
    color: var(--foreground);
    background-color: transparent;
    cursor: pointer;
    user-select: none;
}

.buttons button.primary-button,
.buttons .button.primary-button {
    border: 3px solid var(--foreground);
    border-radius: 10px;
    min-width: 200px;
    padding: 5px 0px;
    margin: 0 20px;
    font-size: 25px;
}

.buttons button:active,
.buttons .button:active {
    background-color: var(--foreground);
    color: var(--background);
    border-color: var(--foreground) !important;
}

.buttons button:focus,
.buttons .button:focus {
    outline: none;
    border-color: var(--highlight);
}

.developer-mode {
    border-radius: 10px;
    padding: 1rem 1rem 0 1rem;
    background: #602525;
    border: 3px solid rgba(255, 255, 255, 0.5);
    position: fixed;
    left: 10px;
    top: 10px;
    max-height: calc(100vh - 20px);
    display: grid;
    grid-template-rows: minmax(0, 1fr);
    box-sizing: border-box;
}

.developer-mode details {
    display: grid;
    grid-template-rows: min-content minmax(0, 1fr);
    min-height: 0;
}

.developer-mode summary {
    user-select: none;
    font-size: 20px;
    cursor: pointer;
    padding: 1rem;
    margin: -1rem -1rem 0 -1rem;
}

.developer-mode-content {
    display: flex;
    flex-direction: column;
    height: 100%;
    min-height: 0;
    padding-bottom: 1rem;
    box-sizing: border-box;
}

.developer-mode .suites {
    flex: 0 1 auto;
    min-height: 0;
    margin-right: calc(0px - var(--scrollbar-width));
    padding-right: var(--scrollbar-width);
    overflow-y: auto;
}

.developer-mode-content ol {
    list-style: none;
    padding: 0;
    margin: 0.5em 0 0 0;
}
.developer-mode-content .button-bar {
    display: flex;
    flex: none;
    margin-top: 5px;
    gap: 3px;
}

.developer-mode-content .select-all::before {
    content: "✔ ";
}

.developer-mode-content .unselect-all::after {
    content: " ✘";
}

.developer-mode-content .settings {
    flex: none;
    display: grid;
    /* Col 1: checkbox, Col 2: text, Col 3: input, Col 4: value */
    grid-template-columns: min-content 1fr 1fr 5em;
    align-items: center;
    gap: 4px;
}
.developer-mode-content .settings hr {
    grid-column: 1 / -1;
    margin: 8px 0;
}

.developer-mode-content .settings label {
    display: contents;
}
.developer-mode-content .settings label > span:first-child {
    /* Range and Select labels start here */
    grid-column: 2;
}
.developer-mode-content .settings label:not(:has(input[type="checkbox"]))::before {
    content: "•";
    grid-column: 1;
    margin-right: 0.2em; /* match checkbox margin so it visually centers */
    place-self: center;
    color: var(--foreground);
}
.developer-mode-content input[type="checkbox"] {
    grid-column: 1;
    margin: 0 0.2em 0 0;
}
.developer-mode-content .settings input[type="checkbox"] + span {
    /* Checkbox text spans the rest of the row */
    grid-column: 2 / -1;
}
.developer-mode-content .settings select {
    /* Select spans input and value columns */
    grid-column: 3 / -1;
}
.developer-mode-content .settings .range-label-data {
    grid-column: 4;
    text-align: right;
}
/* ... */

